add css class for sub buttons

--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -21,10 +21,15 @@ th{
 	padding-bottom:10px;
 }
 
+.headerWrapper{
+	background:#535353;
+	color:white;
+	font-size:14px;
+}
+
 .button{
 	background-color: green;
-    border: 1px solid rgb(0, 0, 0);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid rgb(66, 66, 66);
     border-radius: 0.25em;
     height: 2.5em;
     line-height: 2.5;
@@ -35,16 +40,13 @@ th{
 }
 
 .small-button{
-	background-color: green;
-    border: 1px solid rgb(0, 0, 0);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 0.25em;
-    height: 2.5em;
-    line-height: 2.5;
-    margin: 0.25em;
-    padding: 0 1em;
     width: inherit;
-		color:white;
+}
+
+.sub-button{
+	background:#535353;
+	padding:0 .5em;
+	width:inherit;
 }
 
 .center{
@@ -76,11 +78,8 @@ th{
 	cursor: pointer;
 }
 
-
-
-.small-button:hover{
-	background:#535353;
-	cursor: pointer;
+.sub-button:hover{
+	background: #4D4D4D
 }
 
 .navItem{
