--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -29,7 +29,8 @@ th{
 
 .button{
 	background-color: green;
-    border: 1px solid rgb(66, 66, 66);
+    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0.25em;
     height: 2.5em;
     line-height: 2.5;
@@ -40,6 +41,7 @@ th{
 }
 
 .small-button{
+	border: 1px solid rgb(66, 66, 66);
     width: inherit;
 }
 
