--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -87,8 +87,15 @@ th{
 .navItem{
 	padding-left:10%;
 	font-size:14px;
+
 }
 
+
+.loading{
+		background-image: url('../images/loading.gif');
+  background-position: right center;
+  background-repeat: no-repeat;
+}
 .class{
 	color:red;
 }
